<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:descendantFocusability="blocksDescendants"
			  android:minHeight="100dp"
			  android:orientation="horizontal"
			  android:padding="@dimen/activity_margin">
	
	<ImageView
		android:id="@+id/list_product_image"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:src="@drawable/ic_new_product"/>
	
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginLeft="@dimen/padding_8"
		android:layout_marginRight="@dimen/padding_8"
		android:layout_weight="3"
		android:orientation="vertical">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="4dp"
			android:orientation="horizontal">
			
			<TextView
				android:id="@+id/list_product_name"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:ellipsize="end"
				android:fontFamily="sans-serif-medium"
				android:textAppearance="?android:textAppearanceMedium"
				android:textColor="@color/primaryTextColor"
				tools:text="@string/name_hint"/>
			
			<TextView
				android:id="@+id/list_product_price"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/padding_4"
				android:fontFamily="sans-serif"
				android:text="@string/currency_sign"
				android:textAppearance="?android:textAppearanceSmall"
				android:textColor="@color/colorSecondaryDark"
				android:textStyle="bold"/>
		</LinearLayout>
		
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">
			
			<TextView
				android:id="@+id/list_quantity_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:fontFamily="sans-serif"
				android:text="@string/in_stock"
				android:textAppearance="?android:textAppearanceSmall"
				android:textColor="@color/secondaryTextColor"/>
			
			<TextView
				android:id="@+id/list_quantity_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="4dp"
				android:fontFamily="sans-serif"
				android:textAppearance="?android:textAppearanceSmall"
				android:textColor="@color/secondaryTextColor"
				tools:text="@string/in_stock"/>
		
		</LinearLayout>
	
	
	</LinearLayout>
	
	<ImageView
		android:id="@+id/iv_list_make_sale"
		android:layout_width="@dimen/list_image_height"
		android:layout_height="@dimen/list_image_width"
		android:layout_gravity="center_vertical"
		android:focusableInTouchMode="true"
		android:scaleType="fitXY"
		android:src="@drawable/ic_make_sale"/>

</LinearLayout>
